# focusforge

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  GEMINI.md  IDEAS.md  README.md  build_release.bat  build_release.ps1  deploy_debug.bat  deploy_debug.ps1  deploy_release.bat  deploy_release.ps1  gameidea-implementation.md  gameidea.md  index.html  package-lock.json  package.json  run_debug.bat  run_debug.ps1  run_release.ps1  set_version.bat  set_version.ps1  setup.bat  setup.ps1  update.json  vite.config.ts
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
cmds/: build_release.ps1  deploy_release.ps1  run_debug.ps1  set_version.ps1
docs/: IDEAS.md  improvements2.md  initialideea.md  mobileApp-ImplementationPlan.md  ota-design-impl.md  ota-guide.md  ota-updates.md  projectplan.md  turso-auth-migration-plan.md
public/sounds/: README.md
src/: App.tsx  auth.ts  db.test.ts  db.ts  index.scss  logData.test.ts  logData.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  oauth.rs
src/components/: AlarmOverlay.module.scss  AlarmOverlay.test.tsx  AlarmOverlay.tsx  AlarmsModal.module.scss  AlarmsModal.tsx  AnalyticsView.module.scss  AnalyticsView.test.tsx  AnalyticsView.tsx  CategoryDotPicker.module.scss  CategoryDotPicker.tsx  CategoryManagerModal.module.scss  CategoryManagerModal.tsx  CompletedObjectivesModal.module.scss  CompletedObjectivesModal.tsx  FireBackground.tsx  Footer.module.scss  Footer.tsx  GlitchOverlay.module.scss  Header.tsx  (+31 more)
(+26 files in other folders)
